# TetrisRemakeProject

./: .gitignore  CMakeLists.txt  OpenProject.bat  README.md
MyTetrisProject/: CMakeLists.txt
MyTetrisProject/Src/Core/: Core.h  Entry.cpp  EventHandler.h  Game.cpp  Game.h  Log.h  Math.h  Primitives.h  Renderer.h  Time.h
MyTetrisProject/Src/Game/: Block.h  GridRenderer.h  Tetris.cpp  Tetris.h
